sahsa's changes check commit

--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -187,7 +187,6 @@ button {
 .profile-welcome__form img {
   width: 32%;
   left: 34.6%;
-  top: -20.22%;
   position: absolute;
   border-radius: 50%;
 }
@@ -285,6 +284,9 @@ button {
   .profile-RSK {
     width: 43.54vw;
   }
+  .profile-welcome img {
+    top: -26.2%;
+  }
   .profile-RSK__title {
     font-weight: 400;
     font-size: 23px;
@@ -344,6 +346,9 @@ button {
   .profile-RSK {
     width: 627px;
   }
+  .profile-welcome img {
+    top: -22.2%;
+  }
   .profile-RSK__title {
     font-weight: 400;
     font-size: 23px;
@@ -396,6 +401,9 @@ button {
 @media screen and (min-width: 1921px) {
   .profile-RSK {
     width: 32.66vw;
+  }
+  .profile-welcome img {
+    top: -22.2%;
   }
   .profile-RSK__title {
     font-weight: 400;
