--- a/assets/styles/scss/pages/articles.scss
+++ b/assets/styles/scss/pages/articles.scss
@@ -1,5 +1,7 @@
 @import "../layouts/variables.scss";
 
+// Nastya Klm
+
 .articles-wrapper {
     background-color: $basic-color;
 }
@@ -22,9 +24,6 @@
 
     &__article {
         color: white;
-        font-family: $default-font;
-        font-weight: 500;
-        font-size: 0.9em;
         letter-spacing: 0.5px;
         padding: 2vh 0;
 
@@ -69,9 +68,6 @@
     }
 
     &__title {
-        font-family: $default-font;
-        font-weight: 600;
-        font-size: 0.85em;
         letter-spacing: 0.5px;
         margin-top: 1.5vh;
         margin-bottom: 0;
@@ -80,9 +76,6 @@
 
 
     &__text {
-        font-family: $default-font;
-        font-weight: 300;
-        font-size: 0.85em;
         letter-spacing: 0.7px;
         margin: 1.5vh 0 2vh 0;
     }
@@ -99,9 +92,6 @@
 
 
 .articles-copy {
-    font-family: $default-font;
-        font-weight: 300;
-        font-size: 0.6em;
         letter-spacing: 0.5px;
         color: rgba(0, 0, 0, 0.7);
         text-align: center;
@@ -121,27 +111,18 @@
     
     &__title {
         padding-top: 6vh;
-        font-family: $default-font;
-        font-weight: 500;
-        font-size: 1.5em;
         letter-spacing: 0.7px;
         text-align: center;
     }
 
     &__subtitle {
-        font-family: $default-font;
-        font-weight: 700;
-        font-size: 0.9em;
-        letter-spacing: 0.7px;
+        letter-spacing: 0.8px;
         text-align: center;
         margin: 2vh 0;
     }
 
     &__text {
-        font-family: $default-font;
         color: rgba(0, 0, 0, 0.6);
-        font-weight: 300;
-        font-size: 0.8em;
         letter-spacing: 0.7px;
         line-height: 4vh;
         text-align: justify;
@@ -172,9 +153,6 @@
         align-items: center;
         text-decoration: none;
         color: white;
-        font-family: $default-font;
-        font-weight: 700;
-        font-size: 1em;
         letter-spacing: 0.8px;
     }
 
@@ -182,3 +160,51 @@
         width: 30%;
     }
 }
+
+.articles-section__article,
+.articles-topics__title,
+.articles-topics__text,
+.articles-copy,
+.topic__title,
+.topic__subtitle,
+.topic__text,
+.topic__back {
+    font-family: $default-font;
+}
+
+
+@media screen and (min-width: $desktop) and (max-width: $default-desktop) {
+    
+    .articles-topics__title {
+        @include font (600, calc(( 100vw - 720px ) / 40))
+    }
+
+    .articles-topics__text,
+    .articles-section__article {
+        @include font (300, calc(( 100vw - 160px ) / 80))
+    }
+
+    .articles-copy {
+        @include font (300, calc(( 100vw - 320px ) / 80))
+    }
+
+    .topic__text,
+    .topic__back {
+        @include font (300, calc(( 100vw - 0px ) / 80))
+    }
+
+    .topic__title {
+        @include font (500, calc(( 100vw - 320px ) / 40))
+    }
+
+    .topic__subtitle {
+        @include font (600, calc(( 100vw - 533px ) / 53))
+    }
+
+    .topic__back {
+        @include font (600, calc(( 100vw - 0px ) / 80))
+    }
+    
+}
+
+// Nastya Klm
