user-profile dev begin

--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -6,12 +6,6 @@
   font-family: "Inter";
   src: url(../../../fonts/Inter.ttf);
 }
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 body {
   background-color: #E4EEEE;
 }
@@ -247,17 +241,7 @@ button {
 
 .profile-welcome__button-reg:hover {
   transition-duration: 1s;
-  background-color: #09b4c7;
-}
-
-.b-container {
-  width: 200px;
-  height: 150px;
-  background-color: #ccc;
-  margin: 0px auto;
-  padding: 10px;
-  font-size: 30px;
-  color: #fff;
+  background-color: #148794;
 }
 
 .profile-notification {
@@ -270,14 +254,69 @@ button {
   top: 0px;
 }
 
-.b-popup .b-popup-content {
-  margin: 40px auto 0px auto;
-  width: 100px;
-  height: 40px;
+.profile-notification__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 500px;
+  max-width: 738px;
+  width: 51.25vw;
+  max-height: 268px;
+  height: 26.17vh;
   padding: 10px;
-  background-color: #c5c5c5;
-  border-radius: 5px;
+  margin: 9.76vh auto 0px auto;
+  border: solid 7px #F7C78E;
+  background-color: white;
+  border-radius: 35px;
   box-shadow: 0px 0px 10px #000;
+}
+.profile-notification__content img {
+  width: 8.8%;
+  margin-bottom: 1.19%;
+}
+.profile-notification__content div {
+  text-align: center;
+}
+
+.profile-notification__text {
+  line-height: 180%;
+}
+.profile-notification__text a {
+  color: #089BAB;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.profile-user__data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  height: 29vh;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.profile-user__kkal {
+  width: 100%;
+  height: 34vh;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.profile-user__water {
+  width: 100%;
+  height: 8.7vh;
+  margin-top: 4.3vh;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.profile-user__date {
+  width: 100%;
+  height: 1.95vh;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1440px) {
@@ -345,6 +384,11 @@ button {
     font-size: calc((100vw + 2720px) / 160);
     font-family: "Montserrat", sans-serif;
   }
+  .profile-notification__text {
+    font-weight: 500;
+    font-size: 18px;
+    font-family: "Montserrat", sans-serif;
+  }
 }
 @media screen and (min-width: 1441px) and (max-width: 1920px) {
   .profile-RSK {
@@ -399,6 +443,11 @@ button {
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: 26px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-notification__text {
+    font-weight: 500;
+    font-size: 25px;
     font-family: "Montserrat", sans-serif;
   }
 }
@@ -458,6 +507,11 @@ button {
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: calc((100vw - 290px) / 62);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-notification__text {
+    font-weight: 500;
+    font-size: calc((100vw + 12580px) / 580);
     font-family: "Montserrat", sans-serif;
   }
 }
