--- a/assets/styles/scss/layouts/side-bar.css
+++ b/assets/styles/scss/layouts/side-bar.css
@@ -28,17 +28,12 @@
   justify-content: space-between;
   align-items: center;
   width: 60%;
-  height: 57.7%;
+  height: 61.7%;
   cursor: pointer;
 }
 .side-bar nav li {
   width: 100%;
   list-style-type: none;
-  transition-duration: 0.6s;
-}
-.side-bar nav li :hover {
-  transition-duration: 0.6s;
-  margin-left: 9%;
 }
 
 .side-bar__link {
@@ -49,6 +44,11 @@
   width: 100%;
   text-decoration: none;
   color: white;
+  transition-duration: 0.6s;
+}
+.side-bar__link :hover {
+  transition-duration: 0.6s;
+  margin-left: 20%;
 }
 .side-bar__link img {
   width: 67%;
