--- a/assets/styles/scss/pages/index.scss
+++ b/assets/styles/scss/pages/index.scss
@@ -62,9 +62,8 @@ button {
 .profile-RSK__recommendations {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
-    padding: 6%;
     width: 100%;
     height: 25.78%;
 
@@ -99,7 +98,7 @@ button {
 }
 
 .profile-RSK__weight {
-    margin-top: 2%;
+    margin: 2% 0 0 5%;
 
     span {
         font-weight: 700;
@@ -134,6 +133,8 @@ button {
 .profile-RSK__form-input {
     width: 60%;
     height: 4.29vh;
+    min-height: 35px;
+    max-height: 90px;
     padding-left: 8px;
 
     background-color: $basic-color;
@@ -179,10 +180,10 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     position: relative;
 
-    width: 100%;
+    width: 90%;
     height: 42.87vh;
     padding: 9.34% 9%;
 
@@ -190,20 +191,17 @@ button {
     border-radius: 35px;
 
     img {
-        width: 32%;
-        left: 34.6%;
-        position: absolute;
+        margin-top: -30%;
+
+        width: 36%;
 
         border-radius: 50%;
-
     }
 }
 
 .profile-welcome__form-button {
     align-self: center;
-    justify-self: flex-end;
-    position: absolute;
-    bottom: 4vh;
+    margin-top: 5%;
 
     @include button(36%, 5.37vh);
 }
@@ -219,12 +217,15 @@ button {
     justify-content: space-between;
 
     width: 100%;
-    height: 11.46vh;
-    margin-top: 3.23vh;
+    height: 10.46vh;
+    min-height: 80px;
+    margin-top: 4.23vh;
 }
 
 .profile-welcome__form-input {
     height: 4.29vh;
+    min-height: 35px;
+    max-height: 90px;
     padding-left: 8px;
 
     background-color: $basic-color;
@@ -235,9 +236,10 @@ button {
     cursor: pointer;
 }
 
-.profile-welcome__form-greet {
-    margin-top: 6.52vh;
+.profile-welcome__form-greet{
+    margin-top: 5%
 }
+
 
 .profile-welcome__button-reg {
     @include button(44%, 5.37vh);
@@ -342,17 +344,8 @@ button {
         width: 43.54vw;
     }
 
-    .profile-welcome img {
-        top: -26.2%;
-    }
-
     .profile-RSK__title {
-
         @include font (400, 23px)
-    }
-
-    .profile-RSK__recommendations {
-        padding: 3%
     }
 
     .profile-RSK__kkal {
@@ -364,7 +357,6 @@ button {
     }
 
     .profile-RSK__weight {
-        margin-left: 2%;
         @include font (400, calc((100vw - 373px) / 53));
     }
 
@@ -389,15 +381,11 @@ button {
         margin-right: 5.35vw;
     }
 
-    .profile-welcome__form img {
-        top: -25.2%;
-        left: 35.26%;
-        width: 30%;
-    }
-
     .profile-welcome__form-greet {
-        margin-top: 5.52vh;
         @include font (600, calc((100vw + 2720px) / 160));
+    }
+    .profile-welcome__form-inputs {
+        margin-top: 3.23vh;
     }
 
     .profile-notification__text {
@@ -411,7 +399,7 @@ button {
     }
 
     .profile-welcome img {
-        top: -22.2%;
+        top: -17.2%;
     }
 
     .profile-RSK__title {
@@ -450,6 +438,9 @@ button {
     .profile-welcome {
         width: 500px;
         margin-right: 77px;
+    }
+    .profile-welcome__form img {
+        top: -22%
     }
 
     .profile-welcome__form-greet {
