--- a/assets/styles/scss/layouts/variables.scss
+++ b/assets/styles/scss/layouts/variables.scss
@@ -26,6 +26,8 @@ $large-desktop: 1920px;
 @mixin button ($width, $height) {
     width: $width;
     height: $height;
+    min-height: 44px;
+    max-height: 105px;
 
     border: 0;
     border-radius: 15px;
