added accordion fixes

--- a/assets/styles/scss/pages/diary.css
+++ b/assets/styles/scss/pages/diary.css
@@ -120,7 +120,7 @@ body {
   transform: rotate(45deg);
 }
 
-.d-test_hidden {
+.accordeon_hidden {
   opacity: 0;
   visibility: hidden;
   height: 0px;
