--- a/assets/styles/scss/pages/diary.scss
+++ b/assets/styles/scss/pages/diary.scss
@@ -163,7 +163,7 @@ body {
     transform: rotate(45deg);
 }
 
-.d-test_hidden {
+.accordeon_hidden {
     opacity: 0;
     visibility: hidden;
     height: 0px;
