--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -175,21 +175,23 @@ button {
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 90%;
+  width: 85%;
   height: 42.87vh;
   padding: 9.34% 9%;
   background-color: white;
   border-radius: 35px;
 }
-.profile-welcome__form img {
-  margin-top: -30%;
-  width: 36%;
+
+.profile-welcome__img {
+  position: absolute;
+  top: -7.81vh;
+  height: 16.63vh;
   border-radius: 50%;
 }
 
 .profile-welcome__form-button {
   align-self: center;
-  margin-top: 5%;
+  margin-top: 7%;
   width: 36%;
   height: 5.37vh;
   min-height: 44px;
@@ -229,7 +231,7 @@ button {
 }
 
 .profile-welcome__form-greet {
-  margin-top: 5%;
+  margin-top: 12%;
 }
 
 .profile-welcome__button-reg {
@@ -295,15 +297,38 @@ button {
   font-weight: 600;
 }
 
+.profile-user__settings {
+  align-self: flex-end;
+  margin-top: 3.51vh;
+  height: 5.37vh;
+  cursor: pointer;
+}
+
+.profile-user {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+}
+
 .profile-user__data {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
   width: 100%;
   height: 29vh;
+  padding: 3.9vh;
   background-color: white;
   border-radius: 35px;
+}
+.profile-user__data img {
+  position: absolute;
+  top: -7.81vh;
+  height: 15.62vh;
 }
 
 .profile-user__kkal {
@@ -322,8 +347,76 @@ button {
 }
 
 .profile-user__date {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
-  height: 1.95vh;
+  height: 3.95vh;
+  padding: 0 3% 0 3%;
+}
+.profile-user__date h2 {
+  font-weight: 700;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__date-value {
+  font-weight: 400;
+  font-size: 22px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__date-devider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 35%;
+}
+
+.profile-user__date-line {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.7);
+  height: 50%;
+  width: 100%;
+}
+
+.profile-user__states {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2vh;
+  width: 65.8%;
+  height: 5.76vh;
+}
+
+.profile-user__data-name {
+  font-weight: 600;
+  font-size: 26px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__data-age {
+  margin-top: 1vh;
+  font-weight: 400;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__states-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  font-weight: 400;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__states-name {
+  color: #089BAB;
+}
+
+.profile-user__states-value {
+  font-family: "Inter", sans-serif;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1440px) {
@@ -386,13 +479,27 @@ button {
     font-size: 18px;
     font-family: "Montserrat", sans-serif;
   }
+  .profile-user__data-name {
+    font-weight: 600;
+    font-size: calc((100vw + 640px) / 80);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-user__data-age {
+    font-size: calc((100vw - 160px) / 80);
+  }
+  .profile-user__date h2 {
+    font-size: calc((100vw - 106px) / 53);
+  }
+  .profile-user__date-value {
+    font-size: calc((100vw - 266px) / 53);
+  }
+  .profile-user__states-block {
+    font-size: 20px;
+  }
 }
 @media screen and (min-width: 1441px) and (max-width: 1920px) {
   .profile-RSK {
     width: 627px;
-  }
-  .profile-welcome img {
-    top: -17.2%;
   }
   .profile-RSK__title {
     font-weight: 400;
@@ -437,9 +544,6 @@ button {
     width: 500px;
     margin-right: 77px;
   }
-  .profile-welcome__form img {
-    top: -22%;
-  }
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: 26px;
@@ -454,9 +558,6 @@ button {
 @media screen and (min-width: 1921px) {
   .profile-RSK {
     width: 32.66vw;
-  }
-  .profile-welcome img {
-    top: -22.2%;
   }
   .profile-RSK__title {
     font-weight: 400;
@@ -501,9 +602,6 @@ button {
     width: 26vw;
     margin-right: 4vw;
   }
-  .profile-welcome__form img {
-    top: -17.22%;
-  }
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: calc((100vw - 290px) / 62);
@@ -535,6 +633,11 @@ button {
   margin: auto;
   height: auto;
   background-color: #E4EEEE;
+}
+
+.profile-welcome__wripper,
+.profile-paternity {
+  display: none;
 }
 
 @media screen and (max-width: 1279px) {
