--- a/assets/styles/scss/pages/search.css
+++ b/assets/styles/scss/pages/search.css
@@ -17,11 +17,15 @@
 .elem {
   display: flex;
   align-items: center;
-  max-width: 1101px;
+  max-width: 100%;
   height: 50px;
   border: 1px solid rgb(10, 155, 171);
   margin-top: 20px;
   padding-left: 30px;
   padding-right: 10px;
   justify-content: space-between;
+}
+
+.search-result {
+  width: 50%;
 }/*# sourceMappingURL=search.css.map */
